--- a/LendingSystem/Views/Software/LoanList.cshtml
+++ b/LendingSystem/Views/Software/LoanList.cshtml
@@ -8,7 +8,6 @@
         <div class="panel-heading">
             <a href="/Software" class="btn btn-default">Back</a>
             <button class="btn btn-primary" onclick="buttonClickAddCreate()">Create</button>
-            <button class="btn btn-success" onclick="buttonDownload()">Download</button>
         </div>
     </div>
 
@@ -40,8 +39,8 @@
                                 <div id="wijmoComboboxTransactionType"></div>
                             </div>
                             <div class="form-group">
-                                <label>Customer</label>
-                                <input class="form-control" id="filterCustomer" placeholder="Customer Name (If any)" />
+                                <label>Filter</label>
+                                <input class="form-control" id="filterText" placeholder="Filter text" />
                             </div>
                         </div>
                         <div class="panel-footer">
@@ -58,91 +57,31 @@
 </div>
 
 <div class="modal fae" id="modalLoanDetailForm" role="dialog">
-    <div class="modal-dialog">
+    <div class="modal-dialog modal-sm">
         <div class="modal-content">
             <div class="modal-header">
                 <h4 class="modal-title" id="modalTitle">Loan Detail</h4>
             </div>
             <div class="modal-body">
-                <dl class="dl-horizontal">
-                    <dt>
-                        Principal Amount
-                    </dt>
-                    <dd>
-                        <input id="inputPrincipalAmount" class="form-control text-right number" onkeyup="computeAmouont()" />
-                    </dd>
-                    <dt>
-                        Term
-                    </dt>
-                    <dd>
+                <form>
+                    <div class="form-group">
+                        <label>Customer:</label>
+                        <div id="wijmoComboboxCustomer"></div>
+                    </div>
+                    <hr />
+                    <div class="form-group">
+                        <label>Principal Amount:</label>
+                        <input id="inputPrincipalAmount" class="form-control text-right number input-lg" />
+                    </div>
+                    <div class="form-group">
+                        <label>Term:</label>
                         <div id="wijmoComboboxTerm"></div>
-                    </dd>
-                    <dt>
-                        No. of Days
-                    </dt>
-                    <dd>
-                        <input id="inputNumberOfDays" class="form-control text-right" readonly />
-                    </dd>
-                    <dt>
-                        Interest
-                    </dt>
-                    <dd>
-                        <div id="wijmoComboboxInterest"></div>
-                    </dd>
-                    <dt>
-                        Interest Rate
-                    </dt>
-                    <dd>
-                        <input id="inputInterestPercentage" class="form-control text-right number" readonly />
-                    </dd>
-                    <dt>
-                        Interest Amount
-                    </dt>
-                    <dd>
-                        <input id="inputInterestAmount" class="form-control text-right number" readonly />
-                    </dd>
-                    <dt>
-                        Advance Interest
-                    </dt>
-                    <dd>
-                        <input id="inputIsAdvanceInterestDeduction" type="checkbox" onclick="computeAmouont();" />
-                    </dd>
-                    <dt>
-                        Loan Amount
-                    </dt>
-                    <dd>
-                        <input id="inputLoanAmount" class="form-control text-right number" readonly />
-                    </dd>
-                    <dt>
-                        Previous Balance
-                    </dt>
-                    <dd>
-                        <input id="inputPreviousLoanAmount" class="form-control text-right number" readonly />
-                    </dd>
-                    <dt>
-                        Collectible
-                    </dt>
-                    <dd>
-                        <input id="inputCollectibleAmount" class="form-control text-right number" readonly />
-                    </dd>
-                    <dt>
-                        Claim
-                    </dt>
-                    <dd>
-                        <input id="inputClaimAmount" class="form-control text-right number" readonly />
-                    </dd>
-                    <dt>
-                        Remarks
-                    </dt>
-                    <dd>
-                        <textarea id="inputLoanRemarks" class="form-control" rows="7"></textarea>
-                    </dd>
-                </dl>
+                    </div>
+                </form>
             </div>
             <div class="modal-footer">
-                <button class="btn btn-primary" id="buttonClickApproveLoan" onclick="buttonClickApproveLoan()">Approve</button>
-                <button class="btn btn-primary" id="buttonClickDisapproveLoan" onclick="buttonClickDisapproveLoan()">Disapprove</button>
-                <button class="btn btn-danger" data-dismiss="modal">Cancel</button>
+                <button class="btn btn-primary" id="buttonClickCreateLoan" onclick="buttonClickCreateLoan()">Create</button>
+                <button class="btn btn-danger" data-dismiss="modal">Close</button>
             </div>
         </div>
     </div>
@@ -156,6 +95,7 @@
     var wijmoCollectionViewLoanList;
     var wijmoGridLoanList;
 
+    var wijmoComboboxCustomer;
     var wijmoComboboxTerm;
 
     function getDataLoanList() {
@@ -164,10 +104,10 @@
         var startDate = wijmoInputDateStartDate.value.toLocaleDateString().replace(/\//g, '-');
         var endDate = wijmoInputDateEndDate.value.toLocaleDateString().replace(/\//g, '-');
         var transactionType = wijmoComboboxTransactionType.text;
-        var customerName = document.getElementById("filterCustomer").value;
+        var filterText = document.getElementById("filterText").value;
 
         $.ajax({
-            url: "/api/loan/list/" + startDate + "/ " + endDate + "/" + transactionType + "?customerName=" + customerName,
+            url: "/api/loan/list/" + startDate + "/ " + endDate + "/" + transactionType + "?filterText=" + filterText,
             cache: false,
             type: "GET",
             contentType: "application/json; charset=utf-8",
@@ -175,7 +115,8 @@
                 if (results.length > 0) {
                     for (var i = 0; i < results.length; i++) {
                         loanListObservableArray.push({
-                            ButtonOptions: "<button class='btn btn-primary btn-xs btn-block' onclick='buttonClickOptions()'>Options</button>",
+                            ButtonView: "<button class='btn btn-primary btn-xs btn-block' onclick='buttonClickView()'>View</button>",
+                            ButtonDelete: "<button class='btn btn-danger btn-xs btn-block' onclick='buttonClickDelete()'>Delete</button>",
                             Id: results[i]["Id"],
                             LoanNumber: results[i]["LoanNumber"],
                             LoanDate: results[i]["LoanDate"],
@@ -204,7 +145,8 @@
                             BalanceAmount: results[i]["BalanceAmount"],
                             BalanceAmountDisplay: parseFloat(results[i]["BalanceAmount"]).toFixed(2).toLocaleString().replace(/\B(?=(\d{3})+(?!\d))/g, ","),
                             Remarks: results[i]["Remarks"],
-                            Status: results[i]["Status"]
+                            Status: results[i]["Status"],
+                            IsLocked: results[i]["IsLocked"],
                         });
                     }
                 }
@@ -222,13 +164,28 @@
         wijmoGridLoanList.initialize({
             columns: [
                 {
-                    "header": "Options",
-                    "binding": "ButtonOptions",
-                    "width": 90,
+                    "header": "View",
+                    "binding": "ButtonView",
+                    "width": 70,
                     "align": "center",
                     "allowResizing": false,
                     "allowSorting": false,
                     "isContentHtml": true
+                },
+                {
+                    "header": "Delete",
+                    "binding": "ButtonDelete",
+                    "width": 70,
+                    "align": "center",
+                    "allowResizing": false,
+                    "allowSorting": false,
+                    "isContentHtml": true
+                },
+                {
+                    "header": "L",
+                    "binding": "IsLocked",
+                    "allowSorting": true,
+                    "width": 40
                 },
                 {
                     "header": "Loan No.",
@@ -289,14 +246,95 @@
             autoSizeMode: wijmo.grid.AutoSizeMode.Both,
             allowDragging: wijmo.grid.AllowDragging.None,
             selectionMode: wijmo.grid.SelectionMode.Row,
-            frozenColumns: 1
+            frozenColumns: 3
         });
     }
 
-    function createWijmoComboboxTerm(isDisalbed) {
+    function buttonClickView() {
+
+    }
+
+    function buttonClickAddCreate() {
+        document.getElementById("modalTitle").innerHTML = "Create Loan";
+
+        $("#modalLoanDetailForm").modal({
+            show: true,
+            backdrop: "static"
+        });
+
+        createWijmoComboboxCustomer();
+        document.getElementById("inputPrincipalAmount").value = formatDecimalValues(0);
+    }
+
+    function buttonClickCreateLoan() {
+        var loanObject = new Object();
+        loanObject.CustomerId = wijmoComboboxCustomer.selectedValue;
+        loanObject.TermId = wijmoComboboxTerm.selectedValue;
+        loanObject.PrincipalAmount = document.getElementById("inputPrincipalAmount").value;
+        var loanData = JSON.stringify(loanObject);
+
+        $.ajax({
+            url: "/api/loan/create",
+            type: "POST",
+            contentType: "application/json; charset=utf-8",
+            dataType: "json",
+            data: loanData,
+            statusCode: {
+                200: function (id) {
+                    $("#modalLoanDetailForm").modal("hide");
+                    toastr.success("Create Successful");
+
+                    setTimeout(function () {
+                        window.location = "/Software/LoanDetail?id=" + id;
+                    }, 1000);
+                },
+                404: function (message) {
+                    toastr.error(message.responseText.replace(/^"(.*)"$/, '$1'), "Error 404 - Not Found");
+                },
+                400: function (message) {
+                    toastr.error(message.responseText.replace(/^"(.*)"$/, '$1'), "Error 400 - Bad Request");
+                },
+                500: function (message) {
+                    toastr.error(message.responseText.replace(/^"(.*)"$/, '$1'), "Error 500 - Internal Server Error");
+                }
+            }
+        });
+    }
+
+    function createWijmoComboboxCustomer() {
+        var customerObservableArray = new wijmo.collections.ObservableArray();
+        $.ajax({
+            url: '/api/loan/dropdown/list/customer',
+            cache: false,
+            type: 'GET',
+            contentType: 'application/json; charset=utf-8',
+            success: function (results) {
+                if (results.length > 0) {
+                    for (i = 0; i < results.length; i++) {
+                        customerObservableArray.push({
+                            Id: results[i]["Id"],
+                            FullName: results[i]["FullName"]
+                        });
+                    }
+                }
+
+                wijmoComboboxCustomer.dispose();
+                wijmoComboboxCustomer = new wijmo.input.ComboBox('#wijmoComboboxCustomer', {
+                    placeholder: "Select Customer",
+                    itemsSource: customerObservableArray,
+                    displayMemberPath: "FullName",
+                    selectedValuePath: "Id"
+                });
+
+                createWijmoComboboxTerm();
+            }
+        });
+    }
+
+    function createWijmoComboboxTerm() {
         var termObservableArray = new wijmo.collections.ObservableArray();
         $.ajax({
-            url: '/api/current/loan/dropdown/list/term',
+            url: '/api/loan/dropdown/list/term',
             cache: false,
             type: 'GET',
             contentType: 'application/json; charset=utf-8',
@@ -312,7 +350,6 @@
 
                 wijmoComboboxTerm.dispose();
                 wijmoComboboxTerm = new wijmo.input.ComboBox('#wijmoComboboxTerm', {
-                    disabled: isDisalbed,
                     placeholder: "Select Term",
                     itemsSource: termObservableArray,
                     displayMemberPath: "Term",
@@ -322,25 +359,23 @@
         });
     }
 
-    function buttonClickOptions() {
-
-    }
-
-    function buttonClickOpenLoan() {
-        document.getElementById("modalTitle").innerHTML = "View Loan";
-
-        $("#modalLoanDetailForm").modal({
-            show: true,
-            backdrop: "static"
-        });
-
-        createWijmoComboboxTerm(true);
-    }
-
     function buttonGetData() {
         wijmoCollectionViewLoanList = new wijmo.collections.CollectionView(getDataLoanList());
         wijmoCollectionViewLoanList.canFilter = true;
         wijmoGridLoanList.itemsSource = wijmoCollectionViewLoanList;
+    }
+
+    function buttonClickView() {
+        wijmoCollectionViewLoanList.editItem(wijmoCollectionViewLoanList.currentItem);
+        var id = wijmoCollectionViewLoanList.currentEditItem.Id;
+
+        window.location = "/Software/LoanDetail?id=" + id;
+    }
+
+    function buttonClickDelete() {
+        wijmoCollectionViewLoanList.editItem(wijmoCollectionViewLoanList.currentItem);
+        var id = wijmoCollectionViewLoanList.currentEditItem.Id;
+
     }
 
     window.onload = function () {
@@ -369,7 +404,7 @@
         wijmoComboboxTransactionType.text = "Open";
 
         createWijmoGridLoanList();
+        wijmoComboboxCustomer = new wijmo.input.ComboBox('#wijmoComboboxCustomer');
         wijmoComboboxTerm = new wijmo.input.ComboBox('#wijmoComboboxTerm');
-
     }
 </script>
