--- a/LendingSystem/Views/Software/Index.cshtml
+++ b/LendingSystem/Views/Software/Index.cshtml
@@ -16,7 +16,7 @@
             <a href="/Software/CollectionList" class="btn btn-primary btn-lg btn-block" style="padding-top: 50px; padding-bottom: 50px;">Collection</a>
         </div>
         <div class="col-lg-4">
-            <a href="#" class="btn btn-info btn-lg btn-block" style="padding-top: 50px; padding-bottom: 50px;">Reports</a>
+            <a href="/Software/Reports" class="btn btn-info btn-lg btn-block" style="padding-top: 50px; padding-bottom: 50px;">Reports</a>
             <a href="/Software/UserList" class="btn btn-success btn-lg btn-block" style="padding-top: 50px; padding-bottom: 50px;">User</a>
         </div>
     </div>
